[gd_scene load_steps=19 format=2]

[ext_resource path="res://producto/assets/img/menu_evolucion.png" type="Texture" id=1]
[ext_resource path="res://producto/assets/img/Capsula/Capsule3.png" type="Texture" id=2]
[ext_resource path="res://producto/assets/img/Capsula/Capsule4.png" type="Texture" id=3]
[ext_resource path="res://producto/assets/img/Capsula/Capsule2.png" type="Texture" id=4]
[ext_resource path="res://producto/assets/img/Capsula/Capsule1.png" type="Texture" id=5]
[ext_resource path="res://producto/assets/img/Capsula/Capsule5.png" type="Texture" id=6]
[ext_resource path="res://producto/assets/img/Capsula/teleport_128.png" type="Texture" id=7]
[ext_resource path="res://producto/scripts/Capsula.gd" type="Script" id=8]
[ext_resource path="res://producto/assets/img/mapas_armados/Mapa_Naturaleza/castillo.png" type="Texture" id=9]

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "go"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4 ]
}

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 2 ), ExtResource( 3 ), ExtResource( 6 ) ],
"loop": true,
"name": "go",
"speed": 8.0
} ]

[sub_resource type="CapsuleShape2D" id=4]
radius = 69.0
height = 38.0

[sub_resource type="TileSet" id=5]
0/name = "castillo.png 0"
0/texture = ExtResource( 9 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 992, 32, 32, 32 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[sub_resource type="ConvexPolygonShape2D" id=6]
points = PoolVector2Array( 8.9281, 194.256, 95.3281, 189.072, 90.144, 332.064, 8.9281, 340.704 )

[sub_resource type="ConvexPolygonShape2D" id=7]
points = PoolVector2Array( 0, 0, 33.632, 1.35999, 28.448, 129.232, 0, 129.232 )

[sub_resource type="ConvexPolygonShape2D" id=8]
points = PoolVector2Array( 0, 64, 32, 64, 32, 128, 0, 128 )

[sub_resource type="TileSet" id=9]
0/name = "castillo.png 0"
0/texture = ExtResource( 9 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 512, 672, 96, 352 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 6 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 6 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 1
1/name = "castillo.png 1"
1/texture = ExtResource( 9 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 896, 128, 160 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape = SubResource( 7 )
1/shape_one_way = false
1/shape_one_way_margin = 1.0
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 7 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 1
2/name = "castillo.png 2"
2/texture = ExtResource( 9 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 448, 704, 32, 128 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape = SubResource( 8 )
2/shape_one_way = false
2/shape_one_way_margin = 1.0
2/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 8 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
2/z_index = 0
3/name = "castillo.png 3"
3/texture = ExtResource( 9 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 224, 832, 32, 32 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0
4/name = "castillo.png 4"
4/texture = ExtResource( 9 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 736, 768, 96, 128 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape_one_way = false
4/shape_one_way_margin = 0.0
4/shapes = [  ]
4/z_index = 1
5/name = "castillo.png 5"
5/texture = ExtResource( 9 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 832, 768, 32, 64 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape_one_way = false
5/shape_one_way_margin = 0.0
5/shapes = [  ]
5/z_index = 0
6/name = "castillo.png 6"
6/texture = ExtResource( 9 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 64, 768, 32, 32 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shape_offset = Vector2( 0, 0 )
6/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
6/shape_one_way = false
6/shape_one_way_margin = 0.0
6/shapes = [  ]
6/z_index = 3
7/name = "castillo.png 7"
7/texture = ExtResource( 9 )
7/tex_offset = Vector2( 0, 0 )
7/modulate = Color( 1, 1, 1, 1 )
7/region = Rect2( 416, 672, 32, 32 )
7/tile_mode = 0
7/occluder_offset = Vector2( 0, 0 )
7/navigation_offset = Vector2( 0, 0 )
7/shape_offset = Vector2( 0, 0 )
7/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
7/shape_one_way = false
7/shape_one_way_margin = 0.0
7/shapes = [  ]
7/z_index = 0

[node name="Capsula" type="Node2D"]
script = ExtResource( 8 )

[node name="Sprite" type="Sprite" parent="."]
visible = false
position = Vector2( 506, 283 )
scale = Vector2( 0.619141, 0.442383 )
texture = ExtResource( 1 )

[node name="Sprite_Base" type="Sprite" parent="."]
position = Vector2( 539, 13 )
scale = Vector2( 1.95466, 2.72385 )
z_index = 2
texture = ExtResource( 7 )
vframes = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite_Base"]
anims/RESET = SubResource( 2 )
anims/go = SubResource( 3 )

[node name="Sprite_capusla" type="Sprite" parent="."]
position = Vector2( 539, -146 )
scale = Vector2( 1.82891, 2.11545 )
z_index = 80
texture = ExtResource( 5 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Sprite_capusla"]
frames = SubResource( 1 )
animation = "go"

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 518, 94 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 21, -96 )
rotation = 1.5708
z_index = 2
shape = SubResource( 4 )

[node name="Timer_mantener_tecla" type="Timer" parent="."]
wait_time = 3.0

[node name="TileMap" type="TileMap" parent="."]
z_index = 1
tile_set = SubResource( 5 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( -524284, 536870912, 0, -524283, 536870912, 0, -524282, 536870912, 0, -524281, 536870912, 0, -524280, 536870912, 0, -524279, 536870912, 0, -524278, 536870912, 0, -524277, 536870912, 0, -524276, 536870912, 0, -524275, 536870912, 0, -524274, 536870912, 0, -524273, 536870912, 0, -524272, 536870912, 0, -524271, 536870912, 0, -524270, 536870912, 0, -524269, 536870912, 0, -524268, 536870912, 0, -524267, 536870912, 0, -524266, 536870912, 0, -524265, 536870912, 0, -524264, 536870912, 0, -524263, 536870912, 0, -524262, 536870912, 0, -524261, 536870912, 0, -524260, 536870912, 0, -524259, 536870912, 0, -458748, 536870912, 0, -458747, 536870912, 0, -458746, 536870912, 0, -458745, 536870912, 0, -458744, 536870912, 0, -458743, 536870912, 0, -458742, 536870912, 0, -458741, 536870912, 0, -458740, 536870912, 0, -458739, 536870912, 0, -458738, 536870912, 0, -458737, 536870912, 0, -458736, 536870912, 0, -458735, 536870912, 0, -458734, 536870912, 0, -458733, 536870912, 0, -458732, 536870912, 0, -458731, 536870912, 0, -458730, 536870912, 0, -458729, 536870912, 0, -458728, 536870912, 0, -458727, 536870912, 0, -458726, 536870912, 0, -458725, 536870912, 0, -458724, 536870912, 0, -458723, 536870912, 0, -393212, 536870912, 0, -393211, 536870912, 0, -393210, 536870912, 0, -393209, 536870912, 0, -393208, 536870912, 0, -393207, 536870912, 0, -393206, 536870912, 0, -393205, 536870912, 0, -393204, 536870912, 0, -393203, 536870912, 0, -393202, 536870912, 0, -393201, 536870912, 0, -393200, 536870912, 0, -393199, 536870912, 0, -393198, 536870912, 0, -393197, 536870912, 0, -393196, 536870912, 0, -393195, 536870912, 0, -393194, 536870912, 0, -393193, 536870912, 0, -393192, 536870912, 0, -393191, 536870912, 0, -393190, 536870912, 0, -393189, 536870912, 0, -393188, 536870912, 0, -393187, 536870912, 0, -327676, 536870912, 0, -327675, 536870912, 0, -327674, 536870912, 0, -327673, 536870912, 0, -327672, 536870912, 0, -327671, 536870912, 0, -327670, 536870912, 0, -327669, 536870912, 0, -327668, 536870912, 0, -327667, 536870912, 0, -327666, 536870912, 0, -327665, 536870912, 0, -327664, 536870912, 0, -327663, 536870912, 0, -327662, 536870912, 0, -327661, 536870912, 0, -327660, 536870912, 0, -327659, 536870912, 0, -327658, 536870912, 0, -327657, 536870912, 0, -327656, 536870912, 0, -327655, 536870912, 0, -327654, 536870912, 0, -327653, 536870912, 0, -327652, 536870912, 0, -327651, 536870912, 0, -262140, 536870912, 0, -262139, 536870912, 0, -262138, 536870912, 0, -262137, 536870912, 0, -262136, 536870912, 0, -262135, 536870912, 0, -262134, 536870912, 0, -262133, 536870912, 0, -262132, 536870912, 0, -262131, 536870912, 0, -262130, 536870912, 0, -262129, 536870912, 0, -262128, 536870912, 0, -262127, 536870912, 0, -262126, 536870912, 0, -262125, 536870912, 0, -262124, 536870912, 0, -262123, 536870912, 0, -262122, 536870912, 0, -262121, 536870912, 0, -262120, 536870912, 0, -262119, 536870912, 0, -262118, 536870912, 0, -262117, 536870912, 0, -262116, 536870912, 0, -262115, 536870912, 0, -196604, 536870912, 0, -196603, 536870912, 0, -196602, 536870912, 0, -196601, 536870912, 0, -196600, 536870912, 0, -196599, 536870912, 0, -196598, 536870912, 0, -196597, 536870912, 0, -196596, 536870912, 0, -196595, 536870912, 0, -196594, 536870912, 0, -196593, 536870912, 0, -196592, 536870912, 0, -196591, 536870912, 0, -196590, 536870912, 0, -196589, 536870912, 0, -196588, 536870912, 0, -196587, 536870912, 0, -196586, 536870912, 0, -196585, 536870912, 0, -196584, 536870912, 0, -196583, 536870912, 0, -196582, 536870912, 0, -196581, 536870912, 0, -196580, 536870912, 0, -196579, 536870912, 0, -131068, 536870912, 0, -131067, 536870912, 0, -131066, 536870912, 0, -131065, 536870912, 0, -131064, 536870912, 0, -131063, 536870912, 0, -131062, 536870912, 0, -131061, 536870912, 0, -131060, 536870912, 0, -131059, 536870912, 0, -131058, 536870912, 0, -131057, 536870912, 0, -131056, 536870912, 0, -131055, 536870912, 0, -131054, 536870912, 0, -131053, 536870912, 0, -131052, 536870912, 0, -131051, 536870912, 0, -131050, 536870912, 0, -131049, 536870912, 0, -131048, 536870912, 0, -131047, 536870912, 0, -131046, 536870912, 0, -131045, 536870912, 0, -131044, 536870912, 0, -131043, 536870912, 0, -65532, 536870912, 0, -65531, 536870912, 0, -65530, 536870912, 0, -65529, 536870912, 0, -65528, 536870912, 0, -65527, 536870912, 0, -65526, 536870912, 0, -65525, 536870912, 0, -65524, 536870912, 0, -65523, 536870912, 0, -65522, 536870912, 0, -65521, 536870912, 0, -65520, 536870912, 0, -65519, 536870912, 0, -65518, 536870912, 0, -65517, 536870912, 0, -65516, 536870912, 0, -65515, 536870912, 0, -65514, 536870912, 0, -65513, 536870912, 0, -65512, 536870912, 0, -65511, 536870912, 0, -65510, 536870912, 0, -65509, 536870912, 0, -65508, 536870912, 0, -65507, 536870912, 0, 4, 536870912, 0, 5, 536870912, 0, 6, 536870912, 0, 7, 536870912, 0, 8, 536870912, 0, 9, 536870912, 0, 10, 536870912, 0, 11, 536870912, 0, 12, 536870912, 0, 13, 536870912, 0, 14, 536870912, 0, 15, 536870912, 0, 16, 536870912, 0, 17, 536870912, 0, 18, 536870912, 0, 19, 536870912, 0, 20, 536870912, 0, 21, 536870912, 0, 22, 536870912, 0, 23, 536870912, 0, 24, 536870912, 0, 25, 536870912, 0, 26, 536870912, 0, 27, 536870912, 0, 28, 536870912, 0, 29, 536870912, 0, 65540, 536870912, 0, 65541, 536870912, 0, 65542, 536870912, 0, 65543, 536870912, 0, 65544, 536870912, 0, 65545, 536870912, 0, 65546, 536870912, 0, 65547, 536870912, 0, 65548, 536870912, 0, 65549, 536870912, 0, 65550, 536870912, 0, 65551, 536870912, 0, 65552, 536870912, 0, 65553, 536870912, 0, 65554, 536870912, 0, 65555, 536870912, 0, 65556, 536870912, 0, 65557, 536870912, 0, 65558, 536870912, 0, 65559, 536870912, 0, 65560, 536870912, 0, 65561, 536870912, 0, 65562, 536870912, 0, 65563, 536870912, 0, 65564, 536870912, 0, 65565, 536870912, 0, 131076, 536870912, 0, 131077, 536870912, 0, 131078, 536870912, 0, 131079, 536870912, 0, 131080, 536870912, 0, 131081, 536870912, 0, 131082, 536870912, 0, 131083, 536870912, 0, 131084, 536870912, 0, 131085, 536870912, 0, 131086, 536870912, 0, 131087, 536870912, 0, 131088, 536870912, 0, 131089, 536870912, 0, 131090, 536870912, 0, 131091, 536870912, 0, 131092, 536870912, 0, 131093, 536870912, 0, 131094, 536870912, 0, 131095, 536870912, 0, 131096, 536870912, 0, 131097, 536870912, 0, 131098, 536870912, 0, 131099, 536870912, 0, 131100, 536870912, 0, 131101, 536870912, 0, 196612, 536870912, 0, 196613, 536870912, 0, 196614, 536870912, 0, 196615, 536870912, 0, 196616, 536870912, 0, 196617, 536870912, 0, 196618, 536870912, 0, 196619, 536870912, 0, 196620, 536870912, 0, 196621, 536870912, 0, 196622, 536870912, 0, 196623, 536870912, 0, 196624, 536870912, 0, 196625, 536870912, 0, 196626, 536870912, 0, 196627, 536870912, 0, 196628, 536870912, 0, 196629, 536870912, 0, 196630, 536870912, 0, 196631, 536870912, 0, 196632, 536870912, 0, 196633, 536870912, 0, 196634, 536870912, 0, 196635, 536870912, 0, 196636, 536870912, 0, 196637, 536870912, 0, 262148, 536870912, 0, 262149, 536870912, 0, 262150, 536870912, 0, 262151, 536870912, 0, 262152, 536870912, 0, 262153, 536870912, 0, 262154, 536870912, 0, 262155, 536870912, 0, 262156, 536870912, 0, 262157, 536870912, 0, 262158, 536870912, 0, 262159, 536870912, 0, 262160, 536870912, 0, 262161, 536870912, 0, 262162, 536870912, 0, 262163, 536870912, 0, 262164, 536870912, 0, 262165, 536870912, 0, 262166, 536870912, 0, 262167, 536870912, 0, 262168, 536870912, 0, 262169, 536870912, 0, 262170, 536870912, 0, 262171, 536870912, 0, 262172, 536870912, 0, 262173, 536870912, 0, 327684, 536870912, 0, 327685, 536870912, 0, 327686, 536870912, 0, 327687, 536870912, 0, 327688, 536870912, 0, 327689, 536870912, 0, 327690, 536870912, 0, 327691, 536870912, 0, 327692, 536870912, 0, 327693, 536870912, 0, 327694, 536870912, 0, 327695, 536870912, 0, 327696, 536870912, 0, 327697, 536870912, 0, 327698, 536870912, 0, 327699, 536870912, 0, 327700, 536870912, 0, 327701, 536870912, 0, 327702, 536870912, 0, 327703, 536870912, 0, 327704, 536870912, 0, 327705, 536870912, 0, 327706, 536870912, 0, 327707, 536870912, 0, 327708, 536870912, 0, 327709, 536870912, 0, 393220, 536870912, 0, 393221, 536870912, 0, 393222, 536870912, 0, 393223, 536870912, 0, 393224, 536870912, 0, 393225, 536870912, 0, 393226, 536870912, 0, 393227, 536870912, 0, 393228, 536870912, 0, 393229, 536870912, 0, 393230, 536870912, 0, 393231, 536870912, 0, 393232, 536870912, 0, 393233, 536870912, 0, 393234, 536870912, 0, 393235, 536870912, 0, 393236, 536870912, 0, 393237, 536870912, 0, 393238, 536870912, 0, 393239, 536870912, 0, 393240, 536870912, 0, 393241, 536870912, 0, 393242, 536870912, 0, 393243, 536870912, 0, 393244, 536870912, 0, 393245, 536870912, 0, 458756, 536870912, 0, 458757, 536870912, 0, 458758, 536870912, 0, 458759, 536870912, 0, 458760, 536870912, 0, 458761, 536870912, 0, 458762, 536870912, 0, 458763, 536870912, 0, 458764, 536870912, 0, 458765, 536870912, 0, 458766, 536870912, 0, 458767, 536870912, 0, 458768, 536870912, 0, 458769, 536870912, 0, 458770, 536870912, 0, 458771, 536870912, 0, 458772, 536870912, 0, 458773, 536870912, 0, 458774, 536870912, 0, 458775, 536870912, 0, 458776, 536870912, 0, 458777, 536870912, 0, 458778, 536870912, 0, 458779, 536870912, 0, 458780, 536870912, 0, 458781, 536870912, 0, 524292, 536870912, 0, 524293, 536870912, 0, 524294, 536870912, 0, 524295, 536870912, 0, 524296, 536870912, 0, 524297, 536870912, 0, 524298, 536870912, 0, 524299, 536870912, 0, 524300, 536870912, 0, 524301, 536870912, 0, 524302, 536870912, 0, 524303, 536870912, 0, 524304, 536870912, 0, 524305, 536870912, 0, 524306, 536870912, 0, 524307, 536870912, 0, 524308, 536870912, 0, 524309, 536870912, 0, 524310, 536870912, 0, 524311, 536870912, 0, 524312, 536870912, 0, 524313, 536870912, 0, 524314, 536870912, 0, 524315, 536870912, 0, 524316, 536870912, 0, 524317, 536870912, 0, 589828, 536870912, 0, 589829, 536870912, 0, 589830, 536870912, 0, 589831, 536870912, 0, 589832, 536870912, 0, 589833, 536870912, 0, 589834, 536870912, 0, 589835, 536870912, 0, 589836, 536870912, 0, 589837, 536870912, 0, 589838, 536870912, 0, 589839, 536870912, 0, 589840, 536870912, 0, 589841, 536870912, 0, 589842, 536870912, 0, 589843, 536870912, 0, 589844, 536870912, 0, 589845, 536870912, 0, 589846, 536870912, 0, 589847, 536870912, 0, 589848, 536870912, 0, 589849, 536870912, 0, 589850, 536870912, 0, 589851, 536870912, 0, 589852, 536870912, 0, 589853, 536870912, 0, 655364, 536870912, 0, 655365, 536870912, 0, 655366, 536870912, 0, 655367, 536870912, 0, 655368, 536870912, 0, 655369, 536870912, 0, 655370, 536870912, 0, 655371, 536870912, 0, 655372, 536870912, 0, 655373, 536870912, 0, 655374, 536870912, 0, 655375, 536870912, 0, 655376, 536870912, 0, 655377, 536870912, 0, 655378, 536870912, 0, 655379, 536870912, 0, 655380, 536870912, 0, 655381, 536870912, 0, 655382, 536870912, 0, 655383, 536870912, 0, 655384, 536870912, 0, 655385, 536870912, 0, 655386, 536870912, 0, 655387, 536870912, 0, 655388, 536870912, 0, 655389, 536870912, 0, 720900, 536870912, 0, 720901, 536870912, 0, 720902, 536870912, 0, 720903, 536870912, 0, 720904, 536870912, 0, 720905, 536870912, 0, 720906, 536870912, 0, 720907, 536870912, 0, 720908, 536870912, 0, 720909, 536870912, 0, 720910, 536870912, 0, 720911, 536870912, 0, 720912, 536870912, 0, 720913, 536870912, 0, 720914, 536870912, 0, 720915, 536870912, 0, 720916, 536870912, 0, 720917, 536870912, 0, 720918, 536870912, 0, 720919, 536870912, 0, 720920, 536870912, 0, 720921, 536870912, 0, 720922, 536870912, 0, 720923, 536870912, 0, 720924, 536870912, 0, 720925, 536870912, 0 )

[node name="TileMap2" type="TileMap" parent="."]
z_index = 2
tile_set = SubResource( 9 )
cell_size = Vector2( 32, 32 )
centered_textures = true
format = 1
tile_data = PoolIntArray( -851964, -1073741817, 0, -851963, -1073741817, 0, -851962, -1073741817, 0, -851961, -1073741817, 0, -851960, -1073741817, 0, -851959, -1073741817, 0, -851958, -1073741817, 0, -851957, -1073741817, 0, -851956, -1073741817, 0, -851955, -1073741817, 0, -851954, -1073741817, 0, -851953, -1073741817, 0, -851952, -1073741817, 0, -851951, -1073741817, 0, -851950, -1073741817, 0, -851949, -1073741817, 0, -851948, -1073741817, 0, -851947, -1073741817, 0, -851946, -1073741817, 0, -851945, -1073741817, 0, -851944, -1073741817, 0, -851943, -1073741817, 0, -851942, -1073741817, 0, -851941, -1073741817, 0, -851940, -1073741817, 0, -851939, -1073741817, 0, -786428, 7, 0, -786427, 6, 0, -786426, 6, 0, -786425, 6, 0, -786424, 6, 0, -786423, 6, 0, -786422, 6, 0, -786421, 6, 0, -786420, 6, 0, -786419, 6, 0, -786418, 6, 0, -786417, 6, 0, -786416, 6, 0, -786415, 6, 0, -786414, 6, 0, -786413, 6, 0, -786412, 6, 0, -786411, 6, 0, -786410, 6, 0, -786409, 6, 0, -786408, 6, 0, -786407, 6, 0, -786406, 6, 0, -786405, 6, 0, -786404, 6, 0, -786403, 1610612743, 0, -720892, 7, 0, -720888, 536870917, 0, -720887, 1073741829, 0, -720886, 536870917, 0, -720885, 1073741829, 0, -720881, 536870917, 0, -720880, 1073741829, 0, -720879, 536870917, 0, -720878, 1073741829, 0, -720874, 536870917, 0, -720873, 1073741829, 0, -720872, 536870917, 0, -720871, 1073741829, 0, -720867, 1610612743, 0, -655356, 7, 0, -655354, 536870916, 0, -655352, 536870917, 0, -655350, 536870917, 0, -655349, 1073741829, 0, -655347, 536870916, 0, -655345, 536870917, 0, -655344, 1073741829, 0, -655343, 536870917, 0, -655342, 1073741829, 0, -655340, 536870916, 0, -655337, 1073741829, 0, -655336, 536870917, 0, -655335, 1073741829, 0, -655333, 536870916, 0, -655331, 1610612743, 0, -589820, 7, 0, -589816, 536870917, 0, -589815, 1073741829, 0, -589814, 536870917, 0, -589813, 1073741829, 0, -589809, 536870917, 0, -589808, 1073741829, 0, -589807, 536870917, 0, -589806, 1073741829, 0, -589802, 536870917, 0, -589801, 1073741829, 0, -589800, 536870917, 0, -589799, 1073741829, 0, -589795, 1610612743, 0, -524284, 7, 0, -524259, 1610612743, 0, -458748, 7, 0, -458723, 1610612743, 0, -393212, 7, 0, -393187, 1610612743, 0, -327676, 7, 0, -327651, 1610612743, 0, -262140, 7, 0, -262115, 536870919, 0, -196604, 7, 0, -196579, 536870919, 0, -131068, 7, 0, -131043, 536870919, 0, -65532, 7, 0, -65507, 536870919, 0, 4, 7, 0, 29, 536870919, 0, 65540, 7, 0, 65565, 536870919, 0, 131076, 7, 0, 131101, 536870919, 0, 196612, 7, 0, 196637, 536870919, 0, 262148, 7, 0, 262173, 536870919, 0, 327684, 7, 0, 327709, 536870919, 0, 393220, 7, 0, 393245, 536870919, 0, 458756, 7, 0, 458781, 536870919, 0, 524292, 7, 0, 524293, 536870912, 0, 524294, -1610612729, 0, 524295, -1610612729, 0, 524296, -1610612729, 0, 524297, -1610612729, 0, 524298, -1610612729, 0, 524299, -1610612729, 0, 524300, -1610612729, 0, 524301, -1610612729, 0, 524302, -1610612729, 0, 524303, -1610612729, 0, 524304, -1610612729, 0, 524305, -1610612729, 0, 524306, -1610612729, 0, 524307, -1610612729, 0, 524308, -1610612729, 0, 524309, -1610612729, 0, 524310, -1610612729, 0, 524311, -1610612729, 0, 524312, -1610612729, 0, 524313, -1610612729, 0, 524314, -1610612729, 0, 524315, -1610612729, 0, 524316, 536870912, 0, 524317, 536870919, 0, 589828, 7, 0, 589853, 536870919, 0, 655364, 7, 0, 655365, 536870914, 0, 655366, 536870914, 0, 655367, 536870914, 0, 655368, 536870914, 0, 655369, 536870914, 0, 655370, 536870914, 0, 655371, 536870914, 0, 655372, 536870914, 0, 655373, 536870914, 0, 655374, 536870914, 0, 655378, 536870914, 0, 655379, 536870914, 0, 655380, 536870914, 0, 655381, 536870914, 0, 655382, 536870914, 0, 655383, 536870914, 0, 655384, 536870914, 0, 655385, 536870914, 0, 655386, 536870914, 0, 655387, 536870914, 0, 655388, 536870914, 0, 655389, 536870919, 0, 720900, 7, 0, 720912, 536870913, 0, 720925, 536870915, 0, 786436, 1073741827, 0 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="Timer_mantener_tecla" to="." method="_on_Timer_mantener_tecla_timeout"]
